@@ -86,6 +86,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22918) Feed cache keys now use $wgRenderHashAppend
 * (bug 21916) Last-Modified header is now correct when outputting cached feed
 * (bug 20049) Fixed PHP notice in search highlighter that occurs in some cases
+* (bug 23017) Special:Disambiguations now list pages in content namespaces
+  rather than only main namespace
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
